Got communication to the server working for register